# iSponsorblockTV_WebUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  category_explanations.md  pyproject.toml
app/: auth.py  main.py  settings.py
app/assets/static/: app.css  app.js  config.js
app/routes/: auth.py  channels.py  config.py  pair.py  status.py
app/services/: channels.py  config_io.py  pairing.py  restart.py  service_status.py
app/templates/: base.html  channels.html  config.html  login.html  logs.html  pair.html
app/templates/partials/: channel_row.html  channel_search_results.html  device_row.html  logs_tail.html  paired_device.html  status_badge.html  toast.html
docs/: ARCHITECTURE.md  SYSTEMD.md
systemd/: isponsorblocktv-webui.service
tests/: test_auth.py  test_config_io.py  test_restart.py  test_routes.py  test_service_status.py
